--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="https://play-lh.googleusercontent.com/xpSuf77G4CrbMdGDjbEuFsScXZwqA2PMnScNGvU4zGEhtcBWwk3gABxA8tWU_Wermg8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="yandex-verification" content="3511ea8bf7b35ed7" />
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
